# fuzzy-menu

./: .gitignore  Cargo.toml  README.md  test_config.toml
src/: main.rs
