[package]
name = "fuzzy-menu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
toml = "1.1.0"
